@@ -126,6 +126,184 @@ return|;
 block|}
 annotation|@
 name|Override
+DECL|method|getFieldParam
+specifier|public
+name|String
+name|getFieldParam
+parameter_list|(
+specifier|final
+name|String
+name|field
+parameter_list|,
+specifier|final
+name|String
+name|param
+parameter_list|)
+block|{
+specifier|final
+name|String
+name|fpname
+init|=
+name|fpname
+argument_list|(
+name|field
+argument_list|,
+name|param
+argument_list|)
+decl_stmt|;
+name|String
+name|val
+init|=
+name|params
+operator|.
+name|get
+argument_list|(
+name|fpname
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|val
+condition|)
+block|{
+comment|// don't call this.get, we want a specified exception message
+name|val
+operator|=
+name|params
+operator|.
+name|get
+argument_list|(
+name|param
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|val
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Missing required parameter: "
+operator|+
+name|fpname
+operator|+
+literal|" (or default: "
+operator|+
+name|param
+operator|+
+literal|")"
+argument_list|)
+throw|;
+block|}
+block|}
+return|return
+name|val
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getFieldParams
+specifier|public
+name|String
+index|[]
+name|getFieldParams
+parameter_list|(
+specifier|final
+name|String
+name|field
+parameter_list|,
+specifier|final
+name|String
+name|param
+parameter_list|)
+block|{
+specifier|final
+name|String
+name|fpname
+init|=
+name|fpname
+argument_list|(
+name|field
+argument_list|,
+name|param
+argument_list|)
+decl_stmt|;
+name|String
+index|[]
+name|val
+init|=
+name|params
+operator|.
+name|getParams
+argument_list|(
+name|fpname
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|val
+condition|)
+block|{
+comment|// don't call this.getParams, we want a specified exception message
+name|val
+operator|=
+name|params
+operator|.
+name|getParams
+argument_list|(
+name|param
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|val
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Missing required parameter: "
+operator|+
+name|fpname
+operator|+
+literal|" (or default: "
+operator|+
+name|param
+operator|+
+literal|")"
+argument_list|)
+throw|;
+block|}
+block|}
+return|return
+name|val
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|getParams
 specifier|public
 name|String
