@@ -1019,7 +1019,79 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// field defaulting (fall through to non-field-specific value)
-comment|//assertEquals( pint   , required.getFieldInt( "fff",  "int"      ) );
+name|assertEquals
+argument_list|(
+name|pstr
+argument_list|,
+name|required
+operator|.
+name|getFieldParams
+argument_list|(
+literal|"fakefield"
+argument_list|,
+literal|"str"
+argument_list|)
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|pstr
+argument_list|,
+name|required
+operator|.
+name|getFieldParam
+argument_list|(
+literal|"fakefield"
+argument_list|,
+literal|"str"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|pbool
+argument_list|,
+name|required
+operator|.
+name|getFieldBool
+argument_list|(
+literal|"fakefield"
+argument_list|,
+literal|"bool"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|pint
+argument_list|,
+name|required
+operator|.
+name|getFieldInt
+argument_list|(
+literal|"fakefield"
+argument_list|,
+literal|"int"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|pfloat
+argument_list|,
+name|required
+operator|.
+name|getFieldFloat
+argument_list|(
+literal|"fakefield"
+argument_list|,
+literal|"float"
+argument_list|)
+argument_list|)
+expr_stmt|;
 comment|// Required params which are missing: These should throw a 400
 name|assertEquals
 argument_list|(
